# Andromeda-BH

./: .gitignore  BarnesHut.cpp  BarnesHut.h  CMakeLists.txt  CelestialBody.cpp  CelestialBody.h  ConfigParser.h  Makefile  README.md  TreeNode.cpp  TreeNode.h  UnitTest.cpp  a.out  config.ini  main  main.cpp  pos.csv  visualization.py
src/: BarnesHut.cpp  BarnesHut.h  CelestialBody.cpp  CelestialBody.h  ConfigParser.cpp  TreeNode.cpp  TreeNode.h  utils.cpp  utils.h
visualization/: requirements.txt  visualization.py
